src/global/navigation/NavBar.module.scss
@import "../../../themes/colors.module";
@import "../../../themes/breakpoints";

.container {
	position: sticky;
	top: 0;
	z-index: 99;
	background-color: $darkGrey;
	box-shadow: $defaultShadow;
}

.hover {
	&:hover {
		background-color: $mediumGrey;
		transition: linear 400ms;
	}
}

.tab {
	font-size: 12px;

	@include breakpoint(medium) {
		font-size: 14px;
	}

	@extend .hover;
}

.tab:first-child {
	display: flex;
	flex-direction: column;
	min-width: 40px;
	padding: 0 15px;

	&::after {
		margin-top: 5px;
		content: "FVM";
	}

	@include breakpoint(medium) {
		&::after {
			margin-top: 5px;
			content: "FRANKLIN V MOON";
		}
	}
}

.visuallyHidden {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border: 0;
}

.darkModeToggle {
	display: flex;
	justify-content: right;
	border-radius: 0;
	cursor: pointer;
	padding-right: 10px;
	margin-left: 15px;

	@include breakpoint(small) {
		padding: 0 15px;
	}

	@include breakpoint(medium) {
		margin-left: 70px;
	}

	@include breakpoint(xLarge) {
		margin-left: 120px;
	}

	@extend .hover;
}

.spacer {
	flex-grow: 1;
}

.iconDim {
	all: unset;
	margin-top: 8px;
	color: $brightGrey;
}

.iconBright {
	all: unset;
	margin-top: 8px;
	color: $white;
}

.colorDefault {
	color: $brightGrey;
}

